# serializer version: 1
# name: TestCodegenSnapshots.test_lenet5_codegen_snapshot
  '''
  // model.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  
  #include <stdio.h>
  #include <stdlib.h>
  #include "model.h"
  #include "nnc_ops.h"
  
  /* Tensor declarations */
  extern Tensor tensor_input;
  extern Tensor tensor_output;
  extern Tensor tensor_conv1_Conv_output_0;
  extern Tensor tensor_relu1_Relu_output_0;
  extern Tensor tensor_pool1_MaxPool_output_0;
  extern Tensor tensor_conv2_Conv_output_0;
  extern Tensor tensor_relu2_Relu_output_0;
  extern Tensor tensor_pool2_MaxPool_output_0;
  extern Tensor tensor_Flatten_output_0;
  extern Tensor tensor_fc1_Gemm_output_0;
  extern Tensor tensor_relu3_Relu_output_0;
  extern Tensor tensor_fc2_Gemm_output_0;
  extern Tensor tensor_relu4_Relu_output_0;
  extern Tensor tensor_conv1_weight;
  extern Tensor tensor_conv1_bias;
  extern Tensor tensor_conv2_weight;
  extern Tensor tensor_conv2_bias;
  extern Tensor tensor_fc1_weight;
  extern Tensor tensor_fc1_bias;
  extern Tensor tensor_fc2_weight;
  extern Tensor tensor_fc2_bias;
  extern Tensor tensor_fc3_weight;
  extern Tensor tensor_fc3_bias;
  
  /* Conv: /conv1/Conv */
  void node_conv1_Conv(void) {
      nnc_conv(&tensor_input, &tensor_conv1_weight, &tensor_conv1_bias, &tensor_conv1_Conv_output_0, 5, 5, 1, 1, 2, 2);
  }
  
  /* Relu: /relu1/Relu */
  void node_relu1_Relu(void) {
      nnc_relu(&tensor_conv1_Conv_output_0, &tensor_relu1_Relu_output_0);
  }
  
  /* MaxPool: /pool1/MaxPool */
  void node_pool1_MaxPool(void) {
      nnc_maxpool(&tensor_relu1_Relu_output_0, &tensor_pool1_MaxPool_output_0);
  }
  
  /* Conv: /conv2/Conv */
  void node_conv2_Conv(void) {
      nnc_conv(&tensor_pool1_MaxPool_output_0, &tensor_conv2_weight, &tensor_conv2_bias, &tensor_conv2_Conv_output_0, 5, 5, 1, 1, 0, 0);
  }
  
  /* Relu: /relu2/Relu */
  void node_relu2_Relu(void) {
      nnc_relu(&tensor_conv2_Conv_output_0, &tensor_relu2_Relu_output_0);
  }
  
  /* MaxPool: /pool2/MaxPool */
  void node_pool2_MaxPool(void) {
      nnc_maxpool(&tensor_relu2_Relu_output_0, &tensor_pool2_MaxPool_output_0);
  }
  
  /* Flatten: /Flatten */
  void node_Flatten(void) {
      nnc_flatten(&tensor_pool2_MaxPool_output_0, &tensor_Flatten_output_0, 1);
  }
  
  /* Gemm: /fc1/Gemm */
  void node_fc1_Gemm(void) {
      nnc_gemm(&tensor_Flatten_output_0, &tensor_fc1_weight, &tensor_fc1_bias, &tensor_fc1_Gemm_output_0);
  }
  
  /* Relu: /relu3/Relu */
  void node_relu3_Relu(void) {
      nnc_relu(&tensor_fc1_Gemm_output_0, &tensor_relu3_Relu_output_0);
  }
  
  /* Gemm: /fc2/Gemm */
  void node_fc2_Gemm(void) {
      nnc_gemm(&tensor_relu3_Relu_output_0, &tensor_fc2_weight, &tensor_fc2_bias, &tensor_fc2_Gemm_output_0);
  }
  
  /* Relu: /relu4/Relu */
  void node_relu4_Relu(void) {
      nnc_relu(&tensor_fc2_Gemm_output_0, &tensor_relu4_Relu_output_0);
  }
  
  /* Gemm: /fc3/Gemm */
  void node_fc3_Gemm(void) {
      nnc_gemm(&tensor_relu4_Relu_output_0, &tensor_fc3_weight, &tensor_fc3_bias, &tensor_output);
  }
  
  /* Main inference entry point */
  void nnc_run(void) {
      node_conv1_Conv();
      node_relu1_Relu();
      node_pool1_MaxPool();
      node_conv2_Conv();
      node_relu2_Relu();
      node_pool2_MaxPool();
      node_Flatten();
      node_fc1_Gemm();
      node_relu3_Relu();
      node_fc2_Gemm();
      node_relu4_Relu();
      node_fc3_Gemm();
  }
  
  
  // model.h
  // ============================================================
  /* Auto-generated by NTC - DO NOT EDIT */
  #ifndef MODEL_H
  #define MODEL_H
  
  #include <stdint.h>
  #include "nnc_types.h"
  
  /* Tensor declarations */
  extern Tensor tensor_input;
  extern Tensor tensor_output;
  extern Tensor tensor_conv1_Conv_output_0;
  extern Tensor tensor_relu1_Relu_output_0;
  extern Tensor tensor_pool1_MaxPool_output_0;
  extern Tensor tensor_conv2_Conv_output_0;
  extern Tensor tensor_relu2_Relu_output_0;
  extern Tensor tensor_pool2_MaxPool_output_0;
  extern Tensor tensor_Flatten_output_0;
  extern Tensor tensor_fc1_Gemm_output_0;
  extern Tensor tensor_relu3_Relu_output_0;
  extern Tensor tensor_fc2_Gemm_output_0;
  extern Tensor tensor_relu4_Relu_output_0;
  extern Tensor tensor_conv1_weight;
  extern Tensor tensor_conv1_bias;
  extern Tensor tensor_conv2_weight;
  extern Tensor tensor_conv2_bias;
  extern Tensor tensor_fc1_weight;
  extern Tensor tensor_fc1_bias;
  extern Tensor tensor_fc2_weight;
  extern Tensor tensor_fc2_bias;
  extern Tensor tensor_fc3_weight;
  extern Tensor tensor_fc3_bias;
  
  /* Main inference function */
  void nnc_run(void);
  
  #endif  // MODEL_H
  
  // tensors.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  #include "nnc_types.h"
  
  /* Dual Memory Pools (Fast + Slow for spilled tensors) */
  /* Fast memory: 192000 bytes (187.50 KB) */
  /* Slow memory: 309968 bytes (302.70 KB) */
  /* Buffers: 1, Spill points: 23, Reload points: 0 */
  
  /* Fast Memory Pool (SRAM/On-chip) */
  #define NNC_FAST_MEMORY_SIZE 192000
  #define NNC_MEMORY_ALIGNMENT 16
  static uint8_t _nnc_fast_pool[NNC_FAST_MEMORY_SIZE] __attribute__((aligned(NNC_MEMORY_ALIGNMENT))) = {0};
  
  /* Slow Memory Pool (DRAM/External) */
  #define NNC_SLOW_MEMORY_SIZE 309968
  uint8_t _nnc_slow_pool[NNC_SLOW_MEMORY_SIZE] __attribute__((aligned(NNC_MEMORY_ALIGNMENT))) = {0};
  
  
  /* Tensor: input */
  static int64_t tensor_input_shape[] = {1, 1, 28, 28};
  Tensor tensor_input = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_input_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: output */
  static int64_t tensor_output_shape[] = {1, 10};
  Tensor tensor_output = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_output_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /conv1/Conv_output_0 */
  static int64_t tensor_conv1_Conv_output_0_shape[] = {1, 6, 28, 28};
  Tensor tensor_conv1_Conv_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_conv1_Conv_output_0_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /relu1/Relu_output_0 */
  static int64_t tensor_relu1_Relu_output_0_shape[] = {1, 6, 28, 28};
  Tensor tensor_relu1_Relu_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_relu1_Relu_output_0_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /pool1/MaxPool_output_0 */
  static int64_t tensor_pool1_MaxPool_output_0_shape[] = {1, 6, 14, 14};
  Tensor tensor_pool1_MaxPool_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_pool1_MaxPool_output_0_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /conv2/Conv_output_0 */
  static int64_t tensor_conv2_Conv_output_0_shape[] = {1, 16, 10, 10};
  Tensor tensor_conv2_Conv_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_conv2_Conv_output_0_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /relu2/Relu_output_0 */
  static int64_t tensor_relu2_Relu_output_0_shape[] = {1, 16, 10, 10};
  Tensor tensor_relu2_Relu_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_relu2_Relu_output_0_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /pool2/MaxPool_output_0 */
  static int64_t tensor_pool2_MaxPool_output_0_shape[] = {1, 16, 5, 5};
  Tensor tensor_pool2_MaxPool_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_pool2_MaxPool_output_0_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Flatten_output_0 */
  static int64_t tensor_Flatten_output_0_shape[] = {1, 400};
  Tensor tensor_Flatten_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Flatten_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /fc1/Gemm_output_0 */
  static int64_t tensor_fc1_Gemm_output_0_shape[] = {1, 120};
  Tensor tensor_fc1_Gemm_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_fc1_Gemm_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /relu3/Relu_output_0 */
  static int64_t tensor_relu3_Relu_output_0_shape[] = {1, 120};
  Tensor tensor_relu3_Relu_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_relu3_Relu_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /fc2/Gemm_output_0 */
  static int64_t tensor_fc2_Gemm_output_0_shape[] = {1, 84};
  Tensor tensor_fc2_Gemm_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_fc2_Gemm_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /relu4/Relu_output_0 */
  static int64_t tensor_relu4_Relu_output_0_shape[] = {1, 84};
  Tensor tensor_relu4_Relu_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_relu4_Relu_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  
  '''
# ---
# name: TestCodegenSnapshots.test_simple_mlp_codegen_snapshot
  '''
  // model.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  
  #include <stdio.h>
  #include <stdlib.h>
  #include "model.h"
  #include "nnc_ops.h"
  
  /* Tensor declarations */
  extern Tensor tensor_input;
  extern Tensor tensor_output;
  extern Tensor tensor_net_net_0_Flatten_output_0;
  extern Tensor tensor_net_net_1_Gemm_output_0;
  extern Tensor tensor_net_net_2_Relu_output_0;
  extern Tensor tensor_net_net_3_Gemm_output_0;
  extern Tensor tensor_net_net_4_Relu_output_0;
  extern Tensor tensor_net_1_weight;
  extern Tensor tensor_net_1_bias;
  extern Tensor tensor_net_3_weight;
  extern Tensor tensor_net_3_bias;
  extern Tensor tensor_net_5_weight;
  extern Tensor tensor_net_5_bias;
  
  /* Flatten: /net/net.0/Flatten */
  void node_net_net_0_Flatten(void) {
      nnc_flatten(&tensor_input, &tensor_net_net_0_Flatten_output_0, 1);
  }
  
  /* Gemm: /net/net.1/Gemm */
  void node_net_net_1_Gemm(void) {
      nnc_gemm(&tensor_net_net_0_Flatten_output_0, &tensor_net_1_weight, &tensor_net_1_bias, &tensor_net_net_1_Gemm_output_0);
  }
  
  /* Relu: /net/net.2/Relu */
  void node_net_net_2_Relu(void) {
      nnc_relu(&tensor_net_net_1_Gemm_output_0, &tensor_net_net_2_Relu_output_0);
  }
  
  /* Gemm: /net/net.3/Gemm */
  void node_net_net_3_Gemm(void) {
      nnc_gemm(&tensor_net_net_2_Relu_output_0, &tensor_net_3_weight, &tensor_net_3_bias, &tensor_net_net_3_Gemm_output_0);
  }
  
  /* Relu: /net/net.4/Relu */
  void node_net_net_4_Relu(void) {
      nnc_relu(&tensor_net_net_3_Gemm_output_0, &tensor_net_net_4_Relu_output_0);
  }
  
  /* Gemm: /net/net.5/Gemm */
  void node_net_net_5_Gemm(void) {
      nnc_gemm(&tensor_net_net_4_Relu_output_0, &tensor_net_5_weight, &tensor_net_5_bias, &tensor_output);
  }
  
  /* Main inference entry point */
  void nnc_run(void) {
      node_net_net_0_Flatten();
      node_net_net_1_Gemm();
      node_net_net_2_Relu();
      node_net_net_3_Gemm();
      node_net_net_4_Relu();
      node_net_net_5_Gemm();
  }
  
  
  // model.h
  // ============================================================
  /* Auto-generated by NTC - DO NOT EDIT */
  #ifndef MODEL_H
  #define MODEL_H
  
  #include <stdint.h>
  #include "nnc_types.h"
  
  /* Tensor declarations */
  extern Tensor tensor_input;
  extern Tensor tensor_output;
  extern Tensor tensor_net_net_0_Flatten_output_0;
  extern Tensor tensor_net_net_1_Gemm_output_0;
  extern Tensor tensor_net_net_2_Relu_output_0;
  extern Tensor tensor_net_net_3_Gemm_output_0;
  extern Tensor tensor_net_net_4_Relu_output_0;
  extern Tensor tensor_net_1_weight;
  extern Tensor tensor_net_1_bias;
  extern Tensor tensor_net_3_weight;
  extern Tensor tensor_net_3_bias;
  extern Tensor tensor_net_5_weight;
  extern Tensor tensor_net_5_bias;
  
  /* Main inference function */
  void nnc_run(void);
  
  #endif  // MODEL_H
  
  // tensors.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  #include "nnc_types.h"
  
  /* Dual Memory Pools (Fast + Slow for spilled tensors) */
  /* Fast memory: 401408 bytes (392.00 KB) */
  /* Slow memory: 445392 bytes (434.95 KB) */
  /* Buffers: 1, Spill points: 13, Reload points: 0 */
  
  /* Fast Memory Pool (SRAM/On-chip) */
  #define NNC_FAST_MEMORY_SIZE 401408
  #define NNC_MEMORY_ALIGNMENT 16
  static uint8_t _nnc_fast_pool[NNC_FAST_MEMORY_SIZE] __attribute__((aligned(NNC_MEMORY_ALIGNMENT))) = {0};
  
  /* Slow Memory Pool (DRAM/External) */
  #define NNC_SLOW_MEMORY_SIZE 445392
  uint8_t _nnc_slow_pool[NNC_SLOW_MEMORY_SIZE] __attribute__((aligned(NNC_MEMORY_ALIGNMENT))) = {0};
  
  
  /* Tensor: input */
  static int64_t tensor_input_shape[] = {1, 1, 28, 28};
  Tensor tensor_input = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_input_shape,
      .ndim = 4,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: output */
  static int64_t tensor_output_shape[] = {1, 10};
  Tensor tensor_output = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_output_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /net/net.0/Flatten_output_0 */
  static int64_t tensor_net_net_0_Flatten_output_0_shape[] = {1, 784};
  Tensor tensor_net_net_0_Flatten_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_net_net_0_Flatten_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /net/net.1/Gemm_output_0 */
  static int64_t tensor_net_net_1_Gemm_output_0_shape[] = {1, 128};
  Tensor tensor_net_net_1_Gemm_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_net_net_1_Gemm_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /net/net.2/Relu_output_0 */
  static int64_t tensor_net_net_2_Relu_output_0_shape[] = {1, 128};
  Tensor tensor_net_net_2_Relu_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_net_net_2_Relu_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /net/net.3/Gemm_output_0 */
  static int64_t tensor_net_net_3_Gemm_output_0_shape[] = {1, 64};
  Tensor tensor_net_net_3_Gemm_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_net_net_3_Gemm_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /net/net.4/Relu_output_0 */
  static int64_t tensor_net_net_4_Relu_output_0_shape[] = {1, 64};
  Tensor tensor_net_net_4_Relu_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_net_net_4_Relu_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  
  '''
# ---
# name: TestIRSnapshots.test_lenet5_ir_snapshot
  GraphSnapshotWrapper(
    graph=Graph(name=main_graph, nodes=12, inputs=1, outputs=1),
  )
# ---
# name: TestIRSnapshots.test_resnet18_ir_snapshot
  GraphSnapshotWrapper(
    graph=Graph(name=main_graph, nodes=65, inputs=1, outputs=1),
  )
# ---
# name: TestIRSnapshots.test_simple_cnn_ir_snapshot
  GraphSnapshotWrapper(
    graph=Graph(name=main_graph, nodes=10, inputs=1, outputs=1),
  )
# ---
# name: TestIRSnapshots.test_simple_mlp_ir_snapshot
  GraphSnapshotWrapper(
    graph=Graph(name=main_graph, nodes=6, inputs=1, outputs=1),
  )
# ---
